# emp-tool

./: .gitignore  CMakeLists.txt  README.md
emp-tool/: emp-tool.h
emp-tool/circuits/: circuit_file.h
emp-tool/circuits/files/: aes_1cc_syn.emp  sum_32bit_1cc_syn.emp  sum_8bit_1cc.emp  sum_nbit_ncc.emp
emp-tool/io/: net_io_channel.h
emp-tool/utils/: InputOutput.h  block.h  prg.h  utils.h  utils.hpp
test/: garble.cpp
